# trio-edge

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE  README.md  SECURITY.md  implementation_plan.md  pyproject.toml  review1.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  model_support.md  question.yml
.github/workflows/: publish.yml  test.yml
adapters/surveillance-qwen35-2b/: adapter_config.json
data/: trio_console.db
data/eval_benchmark/: frame_0_gt.json  frame_10_gt.json  frame_11_gt.json  frame_12_gt.json  frame_13_gt.json  frame_14_gt.json  frame_1_gt.json  frame_2_gt.json  frame_3_gt.json  frame_4_gt.json  frame_5_gt.json  frame_6_gt.json  frame_7_gt.json  frame_8_gt.json  frame_9_gt.json
deploy/: com.trio.claw.plist  trio-claw.example.yaml
docs/: CAMERA_SOURCES.md
docs/superpowers/plans/: 2026-04-02-onvif-discovery-script.md
docs/superpowers/specs/: 2026-04-02-http-mpegts-relay-cli-design.md  2026-04-02-onvif-discovery-script-design.md
examples/: api_client.py  bench_generate_loop.py  bench_non_qwen.py  bench_prefix_cache.py  bench_sink.py  bench_sink_real.py  bench_speculative.py  bench_streaming_qa.py  bench_temporal.py  bench_visual_similarity.py  curl_api.sh  onvif_monitor.py  quickstart.py  run_baseline_mlxvlm.py  run_bench.py  run_benchmark.py  run_eval.py  run_regression.py  run_surveillance_baseline.py  run_surveillance_mlxvlm_baseline.py  run_tier1_benchmark.py  screen_narrator.py  security_alert.py  stream_monitor.py  streammem_crossframe.py  streammem_stress.py  trioclaw_integration.py  video_analyze.py  watch_camera.py  webcam_gui.py  webcam_to_text.py
experiments/: customer_personas.py  eval_k3.py  eval_k3_robustness.py  eval_temporal.py  exp10_knowledge_graph.py  exp1_counting_accuracy.md  exp2_competitive_benchmark.md  exp3_temporal_aggregation.md  exp4_insight_richness.md  exp9_temporal_pipeline.md  run_mall_benchmark.py  run_mall_benchmark_v2.py  seed_30day_demo.py  smoke_test_e2e.py
experiments/results/: aggregation_results.json  autoresearch_round1.json  autoresearch_round3.json  exp9_temporal.json  k3_eval_results.json  k3_robustness.json  mall_analysis.md  mall_calibrated_results.json  mall_final_results.json  mall_per_frame.json  mall_results.json  mall_v2_per_frame.json  mall_v2_summary.json  persona_eval.json
research/: README.md  benchmark-analysis.md  eval-baseline-plan.md  eval-strategy.md  lora.md  native-engine-plan.md  phase1-custom-generate.md  poc_attention_analysis.py  streammem-validation.md  tome-implementation-plan.md  visual-token-compression.md
research/bench-results/: manifest.json
research/bench-results/internvl3-1b/: gqa__baseline__20260307_2036.json  gqa__baseline__20260308_0846.json  gqa__compressed_50__20260307_2037.json  mmbench__baseline__20260307_2050.json  mmbench__baseline__20260308_0846.json  mmbench__compressed_50__20260307_2050.json  pope__baseline__20260307_1421.json  pope__compressed_50__20260307_1422.json  textvqa__baseline__20260307_2005.json  textvqa__compressed_50__20260307_2006.json
research/bench-results/internvl3-2b/: gqa__baseline__20260307_2038.json  gqa__baseline__20260308_0847.json  gqa__compressed_50__20260307_2038.json  mmbench__baseline__20260307_2051.json  mmbench__baseline__20260308_0848.json  (+8 more)
research/eval-results/: bench_mvbench_8tasks_20_baseline.json  bench_mvbench_8tasks_20_tome_r4.json  bench_mvbench_clevrer_5_baseline.json  bench_pope_100_baseline.json  bench_pope_100_baseline_v2.json  bench_pope_100_qwen3vl_baseline.json  bench_pope_100_qwen3vl_tome_r4.json  bench_pope_100_tome_r4.json  bench_pope_100_tome_r4_hidden_mk02.json  bench_pope_100_tome_r4_hidden_mk025.json  bench_pope_100_tome_r4_hidden_v2.json  bench_pope_100_tome_r4_keys.json  bench_pope_100_tome_r4_keys_v2.json  bench_pope_100_tome_r8.json  bench_pope_random_30_baseline.json  bench_streaming_qa_w10_b100.json  bench_streaming_qa_w30_b100.json  bench_temporal.json  compound-tome-fastv-benchmark.md  crossframe_validation.json  eval_1080p_baseline.json  eval_1080p_tome_r4.json  eval_1080p_tome_r4_hidden.json  eval_baseline.json  eval_compressed_50.json  eval_compressed_75.json  eval_qwen35_0.8b_baseline.json  eval_qwen35_0.8b_tome_r4.json  eval_qwen3vl_baseline.json  eval_qwen3vl_tome_r4.json  eval_tome_r8.json  mlxvlm-native-baselines.md  speculative-decode-benchmark.md  streammem_stress_200f.json
scripts/: bench_models.py  count_monitor.py  eval_lora_adapter.py  eval_vlm.py  onvif_discover.py  overnight_monitor.py  prepare_surveillance_lora.py  seed_camera.py  starbucks_scan.py  test_invoke.py
src/trio_core/: __init__.py  _rtsp_proxy.py  _webcam_gui.py  auth_store.py  backends.py  bench.py  calibration.py  callbacks.py  cli.py  compressed_backend.py  config.py  counter.py  device.py  engine.py  eval.py  eval_benchmarks.py  fastv_backend.py  gated_delta.py  generate.py  http_ingest_relay.py  insights.py  mlx_utils.py  model_adapter.py  native_vision.py  native_vision_standard.py  onvif.py  password_input.py  profiles.py  remote_backend.py  source_resolver.py  speculative.py  streaming_memory.py  token_compression.py  tokenizer.py  tome.py  tome_backend.py  tome_vision.py  utils.py  video.py  whip_relay.py
surveillance_vqa/: baseline_results_full.json  mlxvlm_baseline_results.json
surveillance_vqa/lora_dataset/: config.json
tests/: helpers.py  test_api.py  test_auth_store.py  test_backends.py  test_callbacks.py  test_claw.py  test_cli_auth.py  test_cli_cam_camera.py  test_cli_onvif.py  test_config.py  test_counting.py  test_device.py  test_engine.py  test_fastv.py  test_http_ingest_relay.py  test_inference_router.py  test_model_adapter.py  test_native_vision.py  test_onvif.py  test_onvif_discover_script.py  test_password_input.py  test_prefix_cache.py  test_processor.py  test_profiles.py  test_speculative.py  test_stream_capture.py  test_streaming_memory.py  test_tome.py  test_tome_integration.py  test_video.py  test_watch.py  test_whip_relay.py
(+330 files in other folders)
