[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trio-core"
version = "0.9.0"
description = "Local VLM inference engine for video — Apple Silicon, NVIDIA, and CPU"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
# Note: mlx/torch require Python <3.14; use Python 3.12 or 3.13 for full features
authors = [{name = "Trio Team"}]
keywords = ["vlm", "video", "inference", "vision-language-model", "apple-silicon", "trioclaw", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "Pillow>=9.0",
    "fastapi>=0.104",
    "python-multipart>=0.0.6",
    "uvicorn",
    "typer>=0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.19",
]

[project.urls]
Homepage = "https://github.com/machinefi/trio-core"
Repository = "https://github.com/machinefi/trio-core"
Issues = "https://github.com/machinefi/trio-core/issues"

[project.optional-dependencies]
mlx = ["mlx>=0.16", "tokenizers>=0.19", "huggingface-hub", "safetensors", "jinja2"]
mlx-vlm = ["mlx-vlm>=0.3.12"]
transformers = ["transformers>=4.40", "torch", "accelerate", "qwen-vl-utils"]
webcam = ["opencv-python>=4.8"]
claw = ["websockets>=13.0", "cryptography>=41.0"]
console = ["google-genai>=1.0"]
report = ["weasyprint>=60.0"]
all = ["trio-core[mlx,transformers,webcam,claw,console]"]
dev = ["pytest", "pytest-asyncio", "pytest-timeout", "pytest-cov", "httpx"]

[project.scripts]
trio-core = "trio_core.cli:app"
trio = "trio_core.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/trio_core"]
exclude = ["src/trio_core/eval.py", "src/trio_core/eval_benchmarks.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402", "E702"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
pythonpath = ["tests"]

[tool.coverage.run]
source = ["trio_core"]

[tool.coverage.report]
show_missing = true
skip_empty = true
