[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trio-core"
version = "1.1.4"
description = "Open-source camera intelligence — ONVIF discovery, RTSP relay, YOLO detection, VLM scene understanding"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{name = "Trio Team"}]
keywords = ["vlm", "video", "inference", "camera", "onvif", "rtsp", "yolo", "surveillance", "apple-silicon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "opencv-python-headless>=4.8",
    "torch",
    "transformers",
    "numpy",
    "Pillow>=9.0",
    "fastapi>=0.104",
    "python-multipart>=0.0.6",
    "uvicorn",
    "typer>=0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.19",
    "onnxruntime>=1.17",
    "huggingface-hub>=0.20",
    "httpx>=0.25",
    "openai>=1.0",
    "websockets>=13.0",
    "cryptography>=41.0",
]

[project.urls]
Homepage = "https://github.com/machinefi/trio-core"
Repository = "https://github.com/machinefi/trio-core"
Issues = "https://github.com/machinefi/trio-core/issues"

[project.optional-dependencies]
mlx = ["mlx>=0.16", "tokenizers>=0.19", "huggingface-hub", "safetensors", "jinja2", "opencv-python-headless>=4.8"]
mlx-vlm = ["mlx-vlm>=0.3.12"]
cuda = ["transformers>=5.4", "torch", "torchvision", "accelerate", "qwen-vl-utils", "compressed-tensors", "opencv-python-headless>=4.8"]
claw = ["websockets>=13.0", "cryptography>=41.0"]
relay = []
all = ["trio-core[mlx,claw]", "onvif-zeep"]
dev = ["pytest", "pytest-asyncio", "pytest-timeout", "pytest-cov", "httpx"]

[project.scripts]
trio-core = "trio_core.cli:app"
trio = "trio_core.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/trio_core"]
exclude = ["src/trio_core/eval.py", "src/trio_core/eval_benchmarks.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402", "E702"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
pythonpath = ["tests"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["trio_core"]

[tool.coverage.report]
show_missing = true
skip_empty = true
